[package]
name = "tinker"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.2"
bevy_ecs_tiled = "0.5.1"
bevy_ecs_tilemap = "0.15.0"
bevy_simple_text_input = "0.10.2"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
