[package]
name = "tinker"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.2"
bevy_ecs_tiled = "0.5.1"
bevy_ecs_tilemap = "0.15.0"
bevy_simple_text_input = "0.10.2"
once_cell = "1.20.3"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tungstenite = "0.26.2"
async-tungstenite = { version = "0.29.1", features = ["async-std", "async-std-runtime"] }
uuid = { version = "1.12.1", features = ["v7","serde"]}
futures-util = "0.3.31"
async-std = "1.13.0"
chrono = { version = "0.4.40", features = ["serde"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
